cabal-version:      2.4
name:               lhbd
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Casper Thule

-- An email address to which users can send suggestions, bug reports, and patches.
-- maintainer:

-- A copyright notice.
-- copyright:
-- category:

common common-settings
  default-language: Haskell2010
  ghc-options:
    -Wall

extra-source-files:
    CHANGELOG.md
    README.md

library
    import: common-settings
    hs-source-dirs: src
    build-depends:
        base,
        directory
    exposed-modules:
        Lhbd
            Lhbd.Convert
            Lhbd.Html
                Lhbd.Html.Internal
            Lhbd.Markup

executable lhbd
    import: common-settings
    hs-source-dirs: app
    main-is:    Main.hs

    -- Modules included in this executable, other than Main.
    other-modules: OptParse

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    
        base ^>=4.12.0.0, 
        lhbd,
        optparse-applicative,
        directory
    ghc-options: 
        -O
